# glazebot

./: LICENSE  README.md  pyproject.toml  requirements.txt
glazebot/: __init__.py
glazebot/examples/: few_shot.json
glazebot/prompts/: system_prompt.txt
